ruuning generalized models

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ inference/__pycache__/inference.cpython-311.pyc
 model/__pycache__/attention.cpython-311.pyc
 model/__pycache__/depth_vit.cpython-311.pyc
 src/__pycache__/dl.cpython-311.pyc
+__pycache__
